<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtTitle" />

    <EditText
        android:id="@+id/txtBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtBill"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/txtParty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtParty"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtTipAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtTipAmt"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAmount" />

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtResult"
        android:inputType="textPersonName" />

</LinearLayout>